# fastapi-transformers

./: .dockerignore  Dockerfile  README.md  pyproject.toml
app/: app.py
app/ml/: classifier.py  pipeline.py
app/models/: __init__.py  schemas.py
app/resources/: prompts.yaml
app/utils/: preprocess.py  text_utils.py
